[maven-release-plugin] prepare release TheModules-1.0

--- a/webs/pom.xml
+++ b/webs/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.ee</groupId>
         <artifactId>TheModules</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
 
     <artifactId>webs</artifactId>
@@ -34,7 +32,7 @@
     <dependency>
         <groupId>com.ee</groupId>
         <artifactId>database</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
         <scope>compile</scope>
     </dependency>
     <dependency>
@@ -53,7 +51,7 @@
                 <version>3.4.0</version>
                 <configuration>
                   <!--  <webappDirectory>/sample/servlet/container/deploy/directory</webappDirectory> -->
-                    <!--    <webappDirectory>target</webappDirectory> <<==  error A zip file cannot include itself -->
+                    <!--    <webappDirectory>target</webappDirectory> <<== error A zip file cannot include itself -->
                    </configuration>
 
                </plugin>
