--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.ee</groupId>
     <artifactId>TheModules</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -45,7 +43,7 @@
                     <value>example</value>
                 </property>
             </activation>
-            <properties >
+            <properties>
                 <app.env>prod</app.env>
                 <example>test-test</example>
             </properties>
@@ -115,7 +113,8 @@
     <scm>
         <connection>scm:git:git@github.com:dmdev2020/spring-starter.git</connection>
         <developerConnection>scm:git:git@github.com:dmdev2020/spring-starter.git</developerConnection>
-    </scm>
+      <tag>TheModules-1.0</tag>
+  </scm>
 
     <!--example superPOM --> <!-- --> <!-- --> <!-- --> <!-- -->
     <build>
