commit before first release prepare

--- a/pom.xml
+++ b/pom.xml
@@ -111,8 +111,8 @@
     </dependencyManagement>
 
     <scm>
-        <connection>scm:git:git@github.com:dmdev2020/spring-starter.git</connection>
-        <developerConnection>scm:git:git@github.com:dmdev2020/spring-starter.git</developerConnection>
+        <connection>scm:git:git@github.com:Milovanie/TheModules.git</connection>
+        <developerConnection>scm:git:git@github.com:Milovanie/TheModules.git</developerConnection>
       <tag>TheModules-1.0</tag>
   </scm>
 
