--- a/release.properties
+++ b/release.properties
@@ -1,13 +1,13 @@
 #release configuration
-#Thu Apr 18 01:29:47 CEST 2024
+#Fri Apr 19 18:34:24 CEST 2024
 projectVersionPolicyId=default
 project.dev.com.ee\:database=1.1-SNAPSHOT
 scm.branchCommitComment=@{prefix} prepare branch @{releaseLabel}
 pinExternals=false
 project.scm.com.ee\:aservices.empty=true
 projectVersionPolicyConfig=<projectVersionPolicyConfig>${projectVersionPolicyConfig}</projectVersionPolicyConfig>\n
-project.scm.com.ee\:TheModules.connection=scm\:git\:git@github.com\:Milovanie/TheModules.git
-project.scm.com.ee\:TheModules.developerConnection=scm\:git\:git@github.com\:Milovanie/TheModules.git
+project.scm.com.ee\:TheModules.connection=scm\:git\:git@github.com\:solnze111/TheModules.git
+project.scm.com.ee\:TheModules.developerConnection=scm\:git\:git@github.com\:solnze111/TheModules.git
 pushChanges=true
 project.scm.com.ee\:database.empty=true
 project.rel.com.ee\:database=1.0
@@ -16,17 +16,18 @@ remoteTagging=true
 scm.rollbackCommitComment=@{prefix} rollback the release of @{releaseLabel}
 scm.commentPrefix=[maven-release-plugin] 
 releaseStrategyId=default
-project.rel.com.ee\:TheModules=1.0
-project.dev.com.ee\:TheModules=1.1-SNAPSHOT
+project.rel.com.ee\:TheModules=1.0.0
+project.dev.com.ee\:TheModules=1.0.1-SNAPSHOT
 project.rel.com.ee\:webs=1.0
-project.scm.com.ee\:TheModules.tag=TheModules-1.0
-completedPhase=scm-commit-release
-scm.url=scm\:git\:git@github.com\:dmdev2020/spring-starter.git
+project.scm.com.ee\:TheModules.tag=HEAD
+completedPhase=run-preparation-goals
+scm.url=scm\:git\:git@github.com\:solnze111/TheModules.git
 scm.developmentCommitComment=@{prefix} prepare for next development iteration
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
+exec.additionalArguments=-DignoreSnapshots\=true
 project.scm.com.ee\:webs.empty=true
 project.dev.com.ee\:webs=1.1-SNAPSHOT
-scm.tag=TheModules-1.0
+scm.tag=TheModules-1.0.0
 project.rel.com.ee\:aservices=1.0
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
