[maven-release-plugin] rollback the release of TheModules-1.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.ee</groupId>
     <artifactId>TheModules</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -84,7 +85,7 @@
     <scm>
         <connection>scm:git:git@github.com:solnze111/TheModules.git</connection>
         <developerConnection>scm:git:git@github.com:solnze111/TheModules.git</developerConnection>
-        <tag>TheModules-1.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <!--example superPOM --> <!-- --> <!-- --> <!-- --> <!-- -->
