--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,11 @@
 #release configuration
-#Fri Apr 19 18:34:24 CEST 2024
+#Fri Apr 19 23:12:49 CEST 2024
 projectVersionPolicyId=default
 project.dev.com.ee\:database=1.1-SNAPSHOT
 scm.branchCommitComment=@{prefix} prepare branch @{releaseLabel}
 pinExternals=false
 project.scm.com.ee\:aservices.empty=true
-projectVersionPolicyConfig=<projectVersionPolicyConfig>${projectVersionPolicyConfig}</projectVersionPolicyConfig>\n
+projectVersionPolicyConfig=<projectVersionPolicyConfig>${projectVersionPolicyConfig}</projectVersionPolicyConfig>
 project.scm.com.ee\:TheModules.connection=scm\:git\:git@github.com\:solnze111/TheModules.git
 project.scm.com.ee\:TheModules.developerConnection=scm\:git\:git@github.com\:solnze111/TheModules.git
 pushChanges=true
@@ -13,14 +13,14 @@ project.scm.com.ee\:database.empty=true
 project.rel.com.ee\:database=1.0
 project.dev.com.ee\:aservices=1.1-SNAPSHOT
 remoteTagging=true
-scm.rollbackCommitComment=@{prefix} rollback the release of @{releaseLabel}
-scm.commentPrefix=[maven-release-plugin] 
+scm.rollbackCommitComment=@{prefix} rollback the release of @{releaseLabel}\
+scm.commentPrefix=[maven-release-plugin]
 releaseStrategyId=default
 project.rel.com.ee\:TheModules=1.0.0
 project.dev.com.ee\:TheModules=1.0.1-SNAPSHOT
 project.rel.com.ee\:webs=1.0
 project.scm.com.ee\:TheModules.tag=HEAD
-completedPhase=run-preparation-goals
+completedPhase=end-release
 scm.url=scm\:git\:git@github.com\:solnze111/TheModules.git
 scm.developmentCommitComment=@{prefix} prepare for next development iteration
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
