[maven-release-plugin] prepare release TheModules-1.0.1

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.ee</groupId>
     <artifactId>TheModules</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -86,7 +86,8 @@
     <scm>
         <connection>scm:git:git@github.com:solnze111/TheModules.git</connection>
         <developerConnection>scm:git:git@github.com:solnze111/TheModules.git</developerConnection>
-    </scm>
+      <tag>TheModules-1.0.1</tag>
+  </scm>
 
     <!--example superPOM --> <!-- --> <!-- --> <!-- --> <!-- -->
     <build>
