--- a/database/pom.xml
+++ b/database/pom.xml
@@ -4,11 +4,11 @@
     <parent>
         <groupId>com.ee</groupId>
         <artifactId>TheModules</artifactId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
 
     <artifactId>database</artifactId>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.1</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
