--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.ee</groupId>
     <artifactId>TheModules</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -86,7 +86,7 @@
     <scm>
         <connection>scm:git:git@github.com:solnze111/TheModules.git</connection>
         <developerConnection>scm:git:git@github.com:solnze111/TheModules.git</developerConnection>
-      <tag>TheModules-1.0.1</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <!--example superPOM --> <!-- --> <!-- --> <!-- --> <!-- -->
